Since 0.3.0
-----------

- Added GetField<F> api
  -> Identifiable trait
  -> delete accepts certain patches
  -> fixed and extended BackRef's FieldProxy::populate
- Aggregations
- Quality of life features